Remove react-modal in demo app as it is not used. Fix accessory item views in demo app as they are cut off.

--- a/packages/terra-clinical-application-site/src/index.scss
+++ b/packages/terra-clinical-application-site/src/index.scss
@@ -18,5 +18,5 @@ body {
 
 [class*="ItemView__accessory"],
 [class*="ItemView__accessory"] > * {
-  max-width: 70%;
+  max-width: 100%;
 }
