--- a/packages/terra-clinical-site/src/site.scss
+++ b/packages/terra-clinical-site/src/site.scss
@@ -72,7 +72,7 @@
 
     [class*="ItemView__accessory"],
     [class*="ItemView__accessory"] > * {
-      max-width: 70%;
+      max-width: 100%;
     }
   }
 }
